<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">잉그딕트</string>
    <string name="app_close">CLOSE</string>
    <string name="app_settings">Settings</string>
    <string name="how_to_use">How to use</string>
    <string name="summary_capture">Screen Capture</string>
    <string name="summary_facebook">Upload Facebook</string>
    <string name="summary_score">Score</string>
    <string name="summary_title_detail">DETAIL</string>
    <string name="information">Information</string>
    <string name="app_name_english">EngDict</string>
    <string name="title_button_more">More</string>
    <string name="setting_button">Settings</string>
    <string name="video_end">Finish</string>
    <string name="video_edit_text">:</string>
    <string name="setting_frequency_button">Frequency</string>
    <string name="setting_type_title">Type</string>
    <string name="setting_level_title">Level</string>
    <string name="setting_level_easy">Easy</string>
    <string name="setting_level_dificult">Difficult</string>
    <string name="setting_word_text">Word</string>
    <string name="setting_phrase_text">Phrase</string>
    <string name="setting_save_button">Save</string>
    <string name="alert_msg_exit">Close or visit Engdict FaceBook</string>
    <string name="title_activity_xml">XMLActivity</string>
    <string name="button_yes">CLOSE</string>
    <string name="button_repeat">Repeat</string>
    <string name="button_answer">Answer</string>
    <string name="button_end">End</string>
    <string name="button_skip">Skip</string>
    <string name="button_no">Facebook</string>

</resources>