<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/OJ0XFGuS"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dictation"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <VideoView
            android:id="@+id/videoView1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:keepScreenOn="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowRadius="2"
        android:textColor="#676975"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="90dp" >

        <engdict.player.newdesign.airplane
            android:id="@+id/airplane"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FF1010"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#339EFF"
            android:drawableTop="@drawable/video_skip_button"
            android:onClick="onClick"
            android:text="@string/button_skip"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/smiBlank"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:cursorVisible="false"
            android:ems="10"
            android:inputType="textPassword"
            android:privateImeOptions="defaultInputmode=english;"
            android:text="@string/video_edit_text" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#339EFF"
            android:drawableTop="@drawable/video_repeat_button"
            android:onClick="onClick"
            android:text="@string/button_repeat"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#339EFF"
            android:drawableTop="@drawable/video_showall_button"
            android:onClick="onClick"
            android:text="@string/button_answer"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#339EFF"
            android:drawableTop="@drawable/video_showall_button"
            android:onClick="onClick"
            android:text="@string/video_end"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>