<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/summary_image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/summary_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/summary_close" />

        <ImageView
            android:layout_width="291dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/summary_title_image"
            android:contentDescription="@string/summary_score" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#F4F4F4"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/summary_score"
            android:textColor="#ADADAD"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/summary_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textColor="#5D5D5D"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/summary_movie_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/summary_title_detail"
            android:textColor="#ADADAD"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/summary_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text=""
            android:textColor="#5D5D5D"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#F4F4F4"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:background="#F4F4F4"
            android:orientation="vertical" >

            <Button
                android:id="@+id/screen_shot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/score_capture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/summary_capture"
                android:textColor="#5E5E5E"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:background="#5E5E5E"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:background="#F4F4F4"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <Button
                android:id="@+id/select_btn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/score_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/summary_facebook"
                android:textColor="#5E5E5E"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>